# tracking-analyzer

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  citation.cff  dependencies.cmake  header_graph.puml  readme.md  sample_data.json  targets.json
.github/workflows/: build.yml  code_quality.yml  codeql-analysis.yml  static_analysis.yml
analyzer/: CMakeLists.txt  file.cpp  file.h
cmake/: compiler.cmake
graphs/: whole_project.puml
results-analyzer/: CMakeLists.txt  main.cpp
results-analyzer/gui/: main_window.cpp  main_window.h  main_window.ui
tracking-analyzer/: CMakeLists.txt  bounding_box.cpp  bounding_box.h  dataset.cpp  dataset.h  filesystem.cpp  filesystem.h  main.cpp  tracking_results.cpp  tracking_results.h  training_metadata.cpp  training_metadata.h
tracking-analyzer-gui/: CMakeLists.txt  application.cpp  application.h  color.cpp  color.h  main.cpp
tracking-analyzer-gui/charts/: main_window.ui  overlap_chart.cpp.hidden  training_metadata_chart.cpp.hidden
tracking-analyzer-gui/gui/: main_window.cpp  main_window.h  main_window.ui  qtag.cpp  qtag.h
tracking-analyzer/gui/: main_window.cpp  main_window.h  main_window.ui
tracking-analyzer/tracking-analyzer/: bounding_box.cpp  bounding_box.h  dataset.cpp  dataset.h  exceptions.h  filesystem.cpp  filesystem.h  tracking_results.cpp  tracking_results.h  training_metadata.cpp  training_metadata.h  training_samples.cpp  training_samples.h
unit_tests/: CMakeLists.txt  bounding_box_test.cpp  dataset_test.cpp  exceptions_test.cpp  filesystem_test.cpp  frame_record_test.cpp  results_database_test.cpp  sequence_record_test.cpp  sequence_results_test.cpp  test_utilities.h  tracker_results_test.cpp  training_metadata_test.cpp
unit_tests/test_metadata/: invalid.json
unit_tests/test_metadata/training_metadata/: bg_candidates.json  bg_mined.json  full.json  tg_candidates.json  thresholds.json
